# uHotRank

./: .env.example  BUGFIX_ARTICLE_CONTENT.md  BUGFIX_ARTICLE_ROUTING.md  BUGFIX_ARTICLE_URL_MISSING.md  BUGFIX_CRAWLER_PROGRESS_DISPLAY.md  CRAWLER_PROGRESS_FIX_SUMMARY.md  DUPLICATE_DETECTION.md  ELASTICSEARCH_GUIDE.md  FASTAPI_SETUP_COMPLETE.md  FEATURE_CRAWLER_PROGRESS.md  LLM_GUIDE.md  QUICKSTART.md  README.md  TECH_DETECTION_README.md  USAGE.md  import_to_elasticsearch.py  llm_example.py  main.py  pyproject.toml  run_crawler.py  scrape_with_analysis.py  search_by_analysis.py  search_example.py  start_api.py  test_content_analysis.py  test_crawler_progress.py  test_duplicate_detection.py  test_elasticsearch.py  test_export.py  test_fastapi_app.py  test_get_safe.py  test_llm_provider.py  test_openai_sdk.py  test_services.py  test_tech_detection.py
backend/: README.md
backend/agent/: agent_content_keyword_analysis.py  agent_today_data.py
backend/api/: __init__.py  articles.py  crawler.py  health.py  statistics.py
backend/config/: settings.py
backend/db/: __init__.py  elasticsearch_client.py
backend/llm/: llm_provider.py
backend/models/: __init__.py
backend/schemas/: article.py  common.py  crawler.py  statistics.py
backend/service/: README.md  __init__.py  article_service.py  (+2 more)
frontend/: .env.example  PERFORMANCE_OPTIMIZATIONS.md  README.md  RESPONSIVE_IMPLEMENTATION.md  RESPONSIVE_TEST_GUIDE.md  SETUP.md  SHADCN_SETUP.md  THEME_IMPLEMENTATION.md  THEME_VERIFICATION.md  UI_FIXES.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js
(+77 files in other folders)
