[project]
name = "uhotrank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9.2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "newspaper3k>=0.2.8",
    "fake-useragent>=1.4.0",
    "playwright>=1.40.0",
    "curl-cffi>=0.6.0",
    "markdownify>=0.11.6",
    "readabilipy>=0.2.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]
